--- a/src/templates/country-list.hbs
+++ b/src/templates/country-list.hbs
@@ -1,7 +1,7 @@
 <ul>
-  {{#each items}}
+  {{#each this}}
     <li>
-      <p id='country-item'>{{this}}</p>
+      <p id='country-item'>{{name}}</p>
     </li>
   {{/each}}
 </ul>
