--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,6 +1,10 @@
 body {
+  display: flex;
+  flex-direction: column;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.5rem;
   line-height: 1.5;
   background-color: #fff;
   color: #424242;
@@ -8,20 +12,47 @@ body {
   padding: 16px;
 }
 
-// .example code {
-//   font-family: monospace;
-//   font-size: 16px;
-//   font-weight: 700;
-//   background-color: #009688;
-//   color: #fff;
-//   padding: 2px 6px;
-//   border-radius: 2px;
-// }
+.country-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
-// .example .background {
-//   height: 240px;
-//   // Путь к изображениям из SASS-файла всегда такой, как из папки css
-//   background-image: url('../images/demo.jpg');
-//   background-size: cover;
-//   background-position: center;
-// }
+.country-description-container {
+  padding: 10px;
+}
+
+.country-flag-container {
+  padding: 10px;
+}
+
+form {
+  margin: 0 auto;
+}
+
+h1 {
+  margin: 20px 0;
+
+  text-align: center;
+}
+
+ul {
+  margin: 10px 0;
+}
+
+p {
+  margin: 10px 0;
+
+  font-weight: 700;
+}
+
+span {
+  font-weight: 400;
+}
+
+img {
+  width: 300px;
+  height: auto;
+
+  border: 1px solid #424242;
+}
